@@ -213,18 +213,29 @@ module EventMachine
 	# will start without release_machine being called and will immediately throw
 	# a C++ runtime error.
 	#
-	def EventMachine::run &block
-		@conns = {}
-		@acceptors = {}
-		@timers = {}
-		begin
-			@reactor_running = true
-			initialize_event_machine
-			block and add_timer 0, block
-			run_machine
-		ensure
-			release_machine
-			@reactor_running = false
+	def EventMachine::run blk=nil, tail=nil, &block
+		@tails ||= []
+		tail and @tails.unshift(tail)
+
+		if reactor_running?
+			(b = blk || block) and next_tick(b)
+		else
+			@conns = {}
+			@acceptors = {}
+			@timers = {}
+			begin
+				@reactor_running = true
+				initialize_event_machine
+				(b = blk || block) and add_timer(0, b)
+				run_machine
+			ensure
+				release_machine
+				@reactor_running = false
+			end
+
+			until @tails.empty?
+				@tails.pop.call
+			end
 		end
 	end
 
