@@ -116,3 +116,5 @@ daemons saslauthd and pwcheck.
 14May08: Generated a 0.12 release.
 15May08: Supported EM#get_sockname for acceptors (TCP server sockets).
 	Requested by Roger Pack.
+15Jun08: Supported nested calls to EM#run. Many people contributed ideas to 
+	this, notable raggi and tmm1.
